add test profile, change test configs. fix story domain lazy fetching bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=dltgldgif
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 server.port=8840
+
+spring.profiles.active=test
